Adds run tasks to the build.gradle for easier testing